fix horizontal scroll issue on mobile for real

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,14 @@
 body, html {
     background-image: linear-gradient(rgb(6, 242, 171), rgb(14, 240, 240));
-    width: 100%;
+    max-width: 100% !important;
+    overflow-x: hidden;
     height: 100%;
     touch-action: manipulation;
 }
 
 header {
     background-image: linear-gradient(rgb(14, 240, 240), rgb(6, 242, 171));
-    margin-bottom: 8.0rem;
+    margin-bottom: 2rem;
     max-height: 150px;
 }
 
@@ -18,7 +19,6 @@ nav {
 }
 
 .active {
-    /* color: yellow !important; */
     font-weight:800 !important;
 }
 
@@ -35,6 +35,10 @@ nav {
     align-self: center;
     transform: scale(2.0) !important;
     margin-right: 20px !important; 
+}
+
+.navbar-burger:hover{
+    color: none !important;
 }
 
 .navbar-item {
@@ -74,6 +78,9 @@ nav {
 }
 
 @media  screen and (max-width:1024px) {
+    header {
+        margin-bottom: 1rem !important;
+    }
     .left-tile {
         margin-right: 25px !important;
         margin-left: 25px !important;
